Update 3: Cleanup, capacity and storagePlacesForArticleID
