# models/v2_storage.go
@@ -1,9 +1,7 @@
 package models
 
-import "fmt"
-
 // A struct representing an inventory of an article in a storage (v1)
-type V1Storage struct {
+type V2Storage struct {
 	Location  string `json:"standort,omitempty"`
 	Segment   int    `json:"lagerabschnitt,omitempty"`
 	Row       int    `json:"reihe,omitempty"`
@@ -11,30 +9,22 @@ type V1Storage struct {
 	Height    int    `json:"hoehe,omitempty"`
 	ArticleID int    `json:"articleID,omitempty"`
 	Stock     int    `json:"bestand,omitempty"`
-	Capacity  int    `json:"-"`
+	Capacity  int    `json:"kapazitaet,omitempty"`
 }
 
-func (s V1Storage) IsValid() bool {
+func (s V2Storage) IsValid() bool {
 	return len(s.Location) > 0 &&
 		s.Segment >= 0 &&
 		s.Row >= 0 &&
 		s.Spot >= 0 &&
 		s.Height >= 0 &&
 		s.ArticleID > 0 &&
-		s.Stock >= 0
+		s.Stock >= 0 &&
+		s.Capacity > 0
 }
 
-func (s V1Storage) ToV0Storage() V0Storage {
-	return V0Storage{
-		Name:      s.V1PropertiesToName(),
-		ArticleID: s.ArticleID,
-		Stock:     s.Stock,
-		Capacity:  s.Capacity,
-	}
-}
-
-func (s V1Storage) ToV2Storage() V2Storage {
-	return V2Storage{
+func (s V2Storage) ToV1Storage() V1Storage {
+	return V1Storage{
 		Location:  s.Location,
 		Segment:   s.Segment,
 		Row:       s.Row,
@@ -44,8 +34,4 @@ func (s V1Storage) ToV2Storage() V2Storage {
 		Stock:     s.Stock,
 		Capacity:  s.Capacity,
 	}
-}
-
-func (s V1Storage) V1PropertiesToName() string {
-	return fmt.Sprintf("%s-%d;%d;%d;%d", s.Location, s.Segment, s.Row, s.Spot, s.Height)
 }
