# router/v2_api_storage.go
@@ -11,12 +11,12 @@ import (
 // API endpoint that returns a specific storage by name
 //
 // @Summary Returns a specifc storage by name
-// @Success 200 {object} models.V1Storage
+// @Success 200 {object} models.V2Storage
 // @Failure 404 {} {} "Storage not found"
 // @Param x query string true "Name of storage to retrieve"
-// @Router /v1/storagePlace [get]
-// @Tags V1Storage
-func (s Server) V1StorageGet(c *gin.Context) {
+// @Router /v2/storagePlace [get]
+// @Tags V2Storage
+func (s Server) V2StorageGet(c *gin.Context) {
 	code, v0Storage := s.v0SelectStorageByName(c.Query("x"))
 
 	if code == http.StatusOK {
@@ -26,7 +26,7 @@ func (s Server) V1StorageGet(c *gin.Context) {
 			c.Status(http.StatusInternalServerError)
 			return
 		}
-		c.JSON(code, v1Storage)
+		c.JSON(code, v1Storage.ToV2Storage())
 	} else {
 		c.Status(code)
 	}
@@ -37,12 +37,12 @@ func (s Server) V1StorageGet(c *gin.Context) {
 // @Summary Save a storage
 // @Success 200
 // @Failure 400 {} {} "Invalid storage"
-// @Param storage body models.V1Storage true "Storage to save"
-// @Router /v1/storagePlace/ [put]
-// @Tags V1Storage
-func (s Server) V1StoragePut(c *gin.Context) {
+// @Param storage body models.V2Storage true "Storage to save"
+// @Router /v2/storagePlace/ [put]
+// @Tags V2Storage
+func (s Server) V2StoragePut(c *gin.Context) {
 	// Currently this function is redundant, it is only used for swagger annotations.
-	s.V1StoragePost(c)
+	s.V2StoragePost(c)
 }
 
 // API endpoint that updates a storage
@@ -50,22 +50,19 @@ func (s Server) V1StoragePut(c *gin.Context) {
 // @Summary Update a storage
 // @Success 200
 // @Failure 400 {} {} "Invalid storage"
-// @Param storage body models.V1Storage true "Storage to Update"
-// @Router /v1/storagePlace/ [post]
-// @Tags V1Storage
-func (s Server) V1StoragePost(c *gin.Context) {
-	var v1Storage models.V1Storage
-	c.BindJSON(&v1Storage)
+// @Param storage body models.V2Storage true "Storage to Update"
+// @Router /v2/storagePlace/ [post]
+// @Tags V2Storage
+func (s Server) V2StoragePost(c *gin.Context) {
+	var v2Storage models.V2Storage
+	c.BindJSON(&v2Storage)
 
-	// Bei Aufrufen an legacy Endpunkte soll diese den Wert vom Feld "bestand" annehmen.
-	v1Storage.Capacity = v1Storage.Stock
-
-	if !v1Storage.IsValid() {
+	if !v2Storage.IsValid() {
 		c.Status(http.StatusBadRequest)
 		return
 	}
 
-	c.Status(s.v0InsertOrUpdateStorage(v1Storage.ToV0Storage()))
+	c.Status(s.v0InsertOrUpdateStorage(v2Storage.ToV1Storage().ToV0Storage()))
 }
 
 // API endpoint that deletes a saved storage by name
@@ -73,25 +70,25 @@ func (s Server) V1StoragePost(c *gin.Context) {
 // @Summary Delete a storage by name
 // @Success 204
 // @Param x query string true "Name of storage to delete"
-// @Router /v1/storagePlace [delete]
-// @Tags V1Storage
-func (s Server) V1StorageDeleteByName(c *gin.Context) {
+// @Router /v2/storagePlace [delete]
+// @Tags V2Storage
+func (s Server) V2StorageDeleteByName(c *gin.Context) {
 	s.V0StorageDeleteByName(c)
 }
 
 // API endpoint returns n storages after a specific one
 //
 // @Summary Returns "n" storages lexicographically after storage "name"
-// @Success 200 {array} models.V1Storage
+// @Success 200 {array} models.V2Storage
 // @Param n query int true "Number of storages after the named one"
 // @Param x query string false "Storage name where we should start the cursor"
-// @Router /v1/storagesPlaces [get]
-// @Tags V1Storage
-func (s Server) V1StorageGetCursor(c *gin.Context) {
+// @Router /v2/storagesPlaces [get]
+// @Tags V2Storage
+func (s Server) V2StorageGetCursor(c *gin.Context) {
 	code, v0Storages := s.v0GetStoragesByCursor(c.Query("x"), c.Query("n"))
 
 	if code == http.StatusOK {
-		v1Storages := make([]models.V1Storage, 0)
+		v2Storages := make([]models.V2Storage, 0)
 		for _, v0Storage := range v0Storages {
 			valid, v1Storage := v0Storage.ToV1Storage()
 			if !valid {
@@ -99,9 +96,26 @@ func (s Server) V1StorageGetCursor(c *gin.Context) {
 				c.Status(http.StatusInternalServerError)
 				return
 			}
-			v1Storages = append(v1Storages, v1Storage)
+			v2Storages = append(v2Storages, v1Storage.ToV2Storage())
 		}
-		c.JSON(code, v1Storages)
+		c.JSON(code, v2Storages)
+	} else {
+		c.Status(code)
+	}
+}
+
+// API endpoint returns n storages after a specific one
+//
+// @Summary Returns all storages that contain an article
+// @Success 200 {array} models.V2Storage
+// @Param x query int false "Article ID"
+// @Router /v2/storagePlacesForArticleID [get]
+// @Tags V2Storage
+func (s Server) V2StorageGetPlacesForArticleID(c *gin.Context) {
+	code, v2Storages := s.v2GetStoragesByArticleID(c.Query("x"))
+
+	if code == http.StatusOK {
+		c.JSON(code, v2Storages)
 	} else {
 		c.Status(code)
 	}
